--- a/packages/sandbox/templates/markdown.html
+++ b/packages/sandbox/templates/markdown.html
@@ -12,20 +12,27 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
     <script src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
 
-{{RENDERER_SCRIPT}}
+    {{RENDERER_SCRIPT}}
+
+    {{MARKDOWN_SCRIPT}}
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const renderer = new IDocs.markdown.Renderer(document.body);
+            renderer.render(markdown);
+
+            //add listener for postMessage
+            window.addEventListener('message', (event) => {
+                if (event.data && event.data.markdown) {
+                    renderer.render(event.data.markdown);
+                }
+            });
+
+        });
+    </script>
 
 </head>
 
-<body>
-
-    <textarea id="markdown-input" style="display:none;min-height:300px;width:100%;" placeholder="Type your Interactive Document markdown here...">{{MARKDOWN_CONTENT}}</textarea>
-
-    <div id="content"></div>
-
-    <script>
-        IDocs.markdown.bindTextarea(document.getElementById('markdown-input'), document.getElementById('content'));
-    </script>
-
-</body>
+<body></body>
 
 </html>
