--- a/docs/view/index.html
+++ b/docs/view/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Document Host</title>
+    <script src="https://unpkg.com/markdown-it/dist/markdown-it.min.js"></script>
     <script src="../dist/idocs.host.umd.js"></script>
     <style>
         body {
