--- a/docs/view/index.html
+++ b/docs/view/index.html
@@ -65,7 +65,7 @@
                 <li><b>Drag and drop</b>: drop a markdown file onto this page</li>
                 <li><b>URL parameter</b>: add <em>?load=url/to/your/file.md</em> to the url</li>
                 <li><b>File upload</b>: <button type="button" id="upload-btn">Choose File to Upload</button>
-                    <input type="file" id="file-input" accept=".md" style="display: none;" />
+                    <input type="file" id="file-input" accept=".idoc.md,.idoc.json" style="display: none;" />
                 </li>
                 <li><b>PostMessage</b>: send markdown content to this page using the <code>window.postMessage</code> API
                     with the property <code>markdown</code></li>
