--- a/docs/view/index.html
+++ b/docs/view/index.html
@@ -87,16 +87,7 @@
         <button>edit a copy</button>
     </footer>
 
-    <script>
-        const host = new IDocs.host.Listener({
-            app: 'main',
-            loading: '#loading',
-            help: '#help',
-            uploadButton: '#upload-btn',
-            fileInput: '#file-input',
-            textarea: '#textarea',
-        });
-    </script>
+    <script src="./view.js"></script>
 
 </body>
 
