--- a/docs/view/index.html
+++ b/docs/view/index.html
@@ -87,7 +87,7 @@
         <button>edit a copy</button>
     </footer>
 
-    <script src="./view.js"></script>
+    <script src="../assets/js/view.js"></script>
 
 </body>
 
