--- a/docs/view/index.html
+++ b/docs/view/index.html
@@ -42,6 +42,10 @@
 
 <body>
 
+    <header id="toolbar">
+        
+    </header>
+
     <main>
 
         <textarea id="textarea" style="display: none;"
