add toolbar css

--- a/docs/view/index.html
+++ b/docs/view/index.html
@@ -7,28 +7,8 @@
     <title>Chartifact Interactive Document Host</title>
     <script src="https://cdn.jsdelivr.net/npm/vega@5.29.0"></script>
     <script src="../dist/v1/chartifact.host.umd.js"></script>
+    <link rel="stylesheet" href="../assets/css/chartifact-toolbar.css" />
     <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-            margin: 0;
-        }
-
-        main {
-            display: flex;
-            flex: 1;
-        }
-
-        textarea {
-            flex: 1;
-            resize: none;
-        }
-
-        #app {
-            flex: 2;
-        }
-
         footer {
             font-size: small;
             padding: 3px;
