style the host page, open examples in new tab

--- a/docs/_layouts/view.html
+++ b/docs/_layouts/view.html
@@ -26,7 +26,7 @@
             Loading...
         </div>
 
-        <div id="help" style="display: none;">
+        <div id="help" style="display: none; padding: 1em;">
 
             {{ content }}
 
