--- a/docs/view/index.html
+++ b/docs/view/index.html
@@ -20,9 +20,9 @@ You can render interactive documents here via several methods:
         with the property <code>markdown</code></li>
     <li><b>Examples</b>: click on an example below to load it
         <ul>
-            <li><a href="?load=../assets/examples/markdown/seattle-weather/1.idoc.md">Example 1</a></li>
-            <li><a href="?load=../assets/examples/markdown/seattle-weather/2.idoc.md">Example 2</a></li>
-            <li><a href="?load=../assets/examples/markdown/seattle-weather/3.idoc.md">Example 3</a></li>
+            <li><a href="?load=../assets/examples/markdown/seattle-weather/1.idoc.md" target="_blank">Example 1</a></li>
+            <li><a href="?load=../assets/examples/markdown/seattle-weather/2.idoc.md" target="_blank">Example 2</a></li>
+            <li><a href="?load=../assets/examples/markdown/seattle-weather/3.idoc.md" target="_blank">Example 3</a></li>
         </ul>
     </li>
 </ul>
