Update toolbar CSS link to include version query parameter

--- a/docs/_layouts/view.html
+++ b/docs/_layouts/view.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vega@5.29.0"></script>
     <script src="../dist/v1/chartifact.host.umd.js"></script>
     <link rel="stylesheet" href="{{ '/assets/css/footer.css' | relative_url }}" />
-    <link rel="stylesheet" href="../dist/v1/chartifact-toolbar.css" />
+    <link rel="stylesheet" href="../dist/v1/chartifact-toolbar.css?1" />
 </head>
 
 <body class="chartifact-body">
